--- a/style.css
+++ b/style.css
@@ -1,20 +1,20 @@
 :root {
-  --foreground: #575279;
+  --foreground: #000000;
   --background: #fffaf3;
   --outline: #cecacd;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground: #e0def4;
-    --background: #191724;
+    --foreground: #000000;
+    --background: #ffffff;
     --outline: #524f67;
   }
 }
 
 body {
   margin: 0;
-  font: 1rem/1.6 sans-serif;
+  font: 1rem/1.6 monospace;
   color: var(--foreground);
   background-color: var(--background);
   letter-spacing: 0.04rem;
