--- a/style.css
+++ b/style.css
@@ -96,3 +96,13 @@ ul.skills li {
   padding: 2rem;
   border-radius: 5px;
 }
+
+.container {
+  max-width: 100%;
+  height: auto;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
