--- a/style.css
+++ b/style.css
@@ -84,11 +84,9 @@ ul.skills li {
   border-radius: 5px;
 }
 
-.honors {
-  display: flex;
-  flex-direction: column;
-  row-gap: 2rem;
-  margin-top: 1.7rem
+ul.honors {
+  gap: 0.8rem;
+  margin-top: 1.5rem;
 }
 
 .projects {
